Milestone 2: Backend functionality in place.

--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/resources/messages.properties
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/resources/messages.properties
@@ -272,9 +272,9 @@ simplepage.add-alert.recurrence=Recurrence
 simplepage.add-alert.none=None
 simplepage.add-alert.daily=Daily
 simplepage.add-alert.weekly=Weekly
-simplepage.add-alert-other-message-label=All other inactive alert message
+simplepage.add-alert-other-message-label=Non-Student inactive alert message
 simplepage.add-alert-need-begin-date=Begin date is required.
-simplepage.add-alert-need-end-date=End date is required.
+simplepage.add-alert-need-end-date=End date is required for recurrent messages.
 
 simplepage.exportcc-pagealreadydone=Subpage {2} appears on page {1}. However it has already been included as a subpage of another page. It will not be included a second time.
 simplepage.exportcc-bad-type=Item {2} on page {1} is of a type that can't be put in a Common Cartridge: {3}
