EST-22 Milestone 2 completed

--- a/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/resources/messages.properties
+++ b/custom_builds/67/lessonbuilder/lessonbuilder-10.x_custom/tool/src/resources/messages.properties
@@ -258,18 +258,19 @@ simplepage.add-alert=Inactivity Alert
 simplepage.add-alert-descrip=Automatically trigger an email alert based on a user's inactivity.
 simplepage.add-alert.tooltip=Automatically trigger an email alert based on a user's inactivity.
 simplepage.add-alert-title=Inactivity Alert
+simplepage.add-alert.select=Select the roles that should receive the alert notification
 simplepage.add-alert.to=To
 simplepage.add-alert-all-roles=All Roles
 simplepage.add-alert-student-message-label=Student inactive alert message
+simplepage.add-alert-message-default=Enter the message you would like the user(s) to receive via email, if left empty a default message will be sent.
 simplepage.add-alert-need-role=You must choose at least one role.
-simplepage.add-alert.specify-dates=Specify Dates
-simplepage.add-alert.specify-dates-info=Choose when this alert will be sent
+simplepage.add-alert.specify-dates=Choose when the alert notification will be sent by specifying the date(s)
 simplepage.add-alert.beginning=Beginning
 simplepage.add-alert.ending=Ending
 simplepage.add-alert.date=Date
 simplepage.add-alert.time=Time
-simplepage.add-alert.recurrence=Recurrence
-simplepage.add-alert.none=None
+simplepage.add-alert.recurrence=Choose the frequency this alert should occur
+simplepage.add-alert.none=Once
 simplepage.add-alert.daily=Daily
 simplepage.add-alert.weekly=Weekly
 simplepage.add-alert-other-message-label=Non-Student inactive alert message
