svn merge -r319713:320264 ^/assignment/branches/sakai-10.x

--- a/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment_es.properties
+++ b/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment_es.properties
@@ -163,8 +163,8 @@ gen.notset=No Establecido \t
 gen.notsta=No ha empezado
 gen.of=de \t 
 gen.open=Abierto
-gen.orisub=Enviar texto original
-gen.orisub2=Enviar el texto original con los comentarios del profesor, si aplica \t 
+gen.orisub=Texto original enviado
+gen.orisub2=Texto de env\u00edo original con los comentarios del profesor, si aplica
 gen.orisub3=El \u00faltimo texto del env\u00edo con los comentarios del profesor incluido (si aplica) \t 
 gen.outof=fuera de \t 
 gen.peerReviews=Revisi\u00f3n por pares
@@ -173,7 +173,7 @@ gen.pos=Enviar
 gen.position=Posici\u00f3n
 gen.pre=Vista preliminar
 gen.relea=Publicar
-gen.resub=Reenviar
+gen.resub=Reenviado
 gen.retu=Corregir
 gen.backtolist=Volver a la lista
 gen.reorder=Reordenar
@@ -207,7 +207,7 @@ gen.sortbyfordesc=Ordenador por audiencia (descendente)
 gen.sordes=Ordenar (descendente)
 gen.staass=Comenzar tarea
 gen.status=Estado \t 
-gen.stuatt=Adjuntos enviado \t 
+gen.stuatt=Adjuntos enviados
 gen.student=Alumno \t 
 gen.students=Estudiantes
 gen.stunam=Nombre del Alumno
@@ -358,7 +358,7 @@ prevassig.shostuvie=Mostrar la vista del alumno
 
 releas=Publicar
 
-relgrad=Publicar calificaciones \t 
+relgrad=Publicar calificaciones
 relcommented=Versi\u00f3n comentada
 
 repsubmi.sorbysca=Ordenar por Escala
@@ -499,7 +499,7 @@ subexampleassign=Enviar una tarea de ejemplo
 viewexampleassign=Mostrar la tarea de ejemplo
 assignmenttext=Texto de la tarea
 submitforstudent=Entregar en nombre del estudiante
-resubmit=Reenviar \t 
+resubmit=Reenviar
 viewsubmission=Mostrar reenv\u00edo
 viewsubmissions=Mostrar env\u00edos
 allowResubmit=Permitir reenv\u00edos \t 
@@ -779,7 +779,7 @@ allowResubmission.nouser=Por favor elija al menos un usuario para aplicar los aj
 allowResubmission.toggleall=Seleccionar/deseleccionar todos para permitir reenv\u00ed\tos
 allowResubmission.select.student=Permitir reenv\u00edos desde
 ## single file upload
-singleatt=S\u00f3lo carga de Archivo \u00fanico
+singleatt=Subida de un fichero \u00fanicamente
 att.upl=Seleccionar Archivo\:
 processmessage.file=Cargando archivo(s)
 size.exceeded=El tama\u00f1o de subida m\u00e1ximo de {0} MB ha sido superado. 
@@ -817,8 +817,8 @@ usedGradebookAssignment=Asociada con ''{0}''
 options=Opciones
 youarenot_options=No est\u00e1 autorizado para editar las opciones de la herramienta Tareas. \t 
 options_instruction=Escoge la opci\u00f3n de visualizaci\u00f3n de la p\u00e1gina de calificaciones.
-options_default=(Por defecto) Mostrar todos los env\u00edos del usuario.
-options_searchonly=S\u00f3lo mostrar los env\u00edos del usuario de acuerdo al filtro de grupo y los resultados de b\u00fasqueda.
+options_default=(Por defecto) Mostrar todos los usuarios con env\u00edo.
+options_searchonly=S\u00f3lo mostrar los usuarios con env\u00edo de acuerdo al filtro de grupo y los resultados de b\u00fasqueda.
 options_cannotFindSite=No se encuentra el sitio de la asignatura con id \= ''{0}''.
 options_cannotEditSite=No tiene permiso para editar el sitio de la asignatura con id \= ''{0}''.
 view_instruction=Por favor, seleccione un grupo para ver los env\u00edos de tareas de los estudiantes. \t 
