Rename the Schedule Tool (PBZ-192026)

--- a/custom_builds/142/config/10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/142/config/10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -140,7 +140,7 @@ sakai.sample.tool.servlet2.title                    = Simple Sample Servlet Tool
 sakai.sample.tools.OSIDRepository.description       = Display registered Repositories and Search
 sakai.sample.tools.OSIDRepository.title             = Sample use of RepositoryManager Component
 sakai.schedule.description                          = For posting and viewing deadlines, events, etc.
-sakai.schedule.title                                = Schedule
+sakai.schedule.title                                = Calendar
 sakai.scheduler.description                         = Job Scheduler Based on Quartz
 sakai.scheduler.title                               = Job Scheduler
 sakai.search.description                            = For searching content
