--- a/custom_builds/103/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/103/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -233,3 +233,18 @@ sakai.dashboard.description= Unified My Workspace display of recent announcement
 
 com.rsmart.certification.title=CE Certification
 com.rsmart.certification.description=Provides certification for students who have met criteriaestablished by an instructor
+
+sakai.signup.title=Sign-up
+sakai.signup.description=For enabling online registration for meetings and other events
+
+sakai.site.roster2.title=Roster
+sakai.site.roster2.description=For viewing the site participants list
+
+sakai.delegatedaccess.title=Delegated Access
+sakai.delegatedaccess.description=Delegate access for users based on a site hierarchy
+
+sakai.delegatedaccess.shopping.title=Shopping
+sakai.delegatedaccess.shopping.description=Search for available sites for shopping
+
+sakai.adminsiteperms.title=Admin Site Perms
+sakai.adminsiteperms.description=Allows adminstrators to control permissions for all sites of a type and roles within that site
