--- a/custom_builds/51/config/branches/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/emailimpl/email-impl_es.properties
+++ b/custom_builds/51/config/branches/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/emailimpl/email-impl_es.properties
@@ -1,3 +1,4 @@
+#X-Generator: crowdin.net
 # localization strings for the email-impl
 
 notif=resumen de la notificaci\u00f3n para
@@ -5,3 +6,4 @@ notif=resumen de la notificaci\u00f3n para
 thiaut=Este resumen autom\u00e1tico ser\u00e1 enviado para los usuarios de
 
 youcan=Si desea modificar las opciones de notificaci\u00f3n, acceda a Mi Sitio > Preferencias.
+
