--- a/custom_builds/51/config/branches/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/siteimpl/site-impl_es.properties
+++ b/custom_builds/51/config/branches/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/siteimpl/site-impl_es.properties
@@ -1,3 +1,4 @@
+#X-Generator: crowdin.net
 # localization for site-impl
 
 sitpag.lay_sngl=Layout en una columna
@@ -5,3 +6,4 @@ sitpag.lay_dbl=Layout en dos columnas
 sitdis.usr={0} del sitio
 entdsc.sit=Sitio\: {0}
 entdsc.sit_usr=Sitio\: {0} Creado\: {1} por {2} {3}
+
