--- a/custom_builds/51/config/branches/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/content_type/content_type_names_es.properties
+++ b/custom_builds/51/config/branches/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/content_type/content_type_names_es.properties
@@ -1,10 +1,10 @@
-contenttype.name.default=Unknown
+contenttype.name.default=Desconocido
 
-application/binary=Binary file
+application/binary=Archivo binario
 application/astound=Astound
 application/commonground=Common Ground
 application/cybercash=Cybercash
-application/ims-cp=IMS Content Package
+application/ims-cp=Paquete de contenido IMS
 application/java=Java
 application/mac-binhex40=Binhex
 application/macwriteii=Mac Write
@@ -16,7 +16,7 @@ application/ms-powerpoint=PowerPoint
 application/mspowerpoint=PowerPoint
 application/x-mspowerpoint=PowerPoint
 application/msppt=PowerPoint
-application/vnd.ms-powerpoint=PowerPoint
+application/vnd.ms-powerpoint=Power Point
 application/x-powerpoint=PowerPoint
 application/powerpoint=PowerPoint
 application/msword=Word
@@ -25,14 +25,13 @@ application/postscript=Postscript
 application/rtf=RTF
 application/sgml=SGML
 application/vnd.ms-excel=Excel
-application/vnd.ms-powerpoint=Power Point
 application/vnd.ms-project=Project
 application/vnd.ms-works=Works
 application/wordperfect5.1=Word Perfect
 application/x-crossover-doc=Crossover Doc
 application/x-director=Director
 application/x-gtar=Tar
-application/x-gzip=Gzip archive
+application/x-gzip=archivo Gzip'ed 
 application/x-javascript=Javascript
 application/x-latex=Latex
 application/x-msexcel=Excel
@@ -43,7 +42,7 @@ application/x-stuffit=Stuffit
 application/x-tar=Tar
 application/x-tardist=Tar
 application/x-tcl=TCL
-application/x-tex=tex file
+application/x-tex=TEX
 application/x-troff=Troff
 application/x-wingz=Wingz
 application/x-zip-compressed=Zip
@@ -66,55 +65,55 @@ audio/x-mpeg3=Audio
 audio/x-mpg=Audio
 audio/x-mpegaudio=Audio
 graphics/x-inventor=Inventor
-image/cgm=Image
-image/bitmap=Image
-image/bmp=Image
-image/fif=Image
-image/g3fax=Image
-image/gif=Image
-image/png=Image
-image/ief=Image
-image/jpeg=Image
-image/naplps=Image
-image/rgb=Image
-image/svg+xml=Image
-image/tiff=Image
-image/vnd.dwg=Image
-image/vnd.dxf=Image
-image/vnd.svf =Image
-image/wavelet=Image
-image/x-cals=Image
-image/x-cmu-raster=Image
-image/x-cmx=Image
-image/x-dwg=Image
-image/x-dxf =Image
-image/x-mgx-dsf=Image
-image/x-ms-bmp=Image
-image/x-photo-cd=Image
-image/x-pict=Image
-image/x-png=Image
-image/x-portable-anymap=Image
-image/x-portable-bitmap=Image
-image/x-portable-graymap=Image
-image/x-portable-pixmap=Image
-image/x-rgb=Image
-image/x-xbitmap=Image
-image/x-xpixmap=Image
-image/x-xwindowdump=Image
+image/cgm=Imagen
+image/bitmap=Imagen
+image/bmp=Imagen
+image/fif=Imagen
+image/g3fax=Imagen
+image/gif=Imagen
+image/png=Imagen
+image/ief=Imagen
+image/jpeg=Imagen
+image/naplps=Imagen
+image/rgb=Imagen
+image/svg+xml=Imagen
+image/tiff=Imagen
+image/vnd.dwg=Imagen
+image/vnd.dxf=Imagen
+image/vnd.svf=Imagen
+image/wavelet=Imagen
+image/x-cals=Imagen
+image/x-cmu-raster=Imagen
+image/x-cmx=Imagen
+image/x-dwg=Imagen
+image/x-dxf=Imagen
+image/x-mgx-dsf=Imagen
+image/x-ms-bmp=Imagen
+image/x-photo-cd=Imagen
+image/x-pict=Imagen
+image/x-png=Imagen
+image/x-portable-anymap=Imagen
+image/x-portable-bitmap=Imagen
+image/x-portable-graymap=Imagen
+image/x-portable-pixmap=Imagen
+image/x-rgb=Imagen
+image/x-xbitmap=Imagen
+image/x-xpixmap=Imagen
+image/x-xwindowdump=Imagen
 model/vrml=VRML
 text/css=CSS
 text/html=Html
 text/javascript=Javascript
-text/plain=Text
+text/plain=Texto
 text/richtext=RTF
 text/sgml=SGML
-text/tab-separated-values=Text
+text/tab-separated-values=Texto
 text/url=URL
 text/vbscript=VbScript
 text/x-comma-separated-values=CSV
-text/x-enriched=Text
-text/x-setext=Text
-text/x-speech=Text
+text/x-enriched=Texto
+text/x-setext=Texto
+text/x-speech=Texto
 text/x-tex=Text
 text/xml=XML
 video/mpeg=Mpeg
@@ -123,30 +122,28 @@ video/quicktime=Quicktime
 video/mp4=Mpeg4 Video
 video/x-m4v=Mpeg4 Video
 x-music/x-midi=MIDI
-image/pjpeg=Image
-application/octet-stream=Unknown
-application/x-msdownload=Windows Executable
-application/x-msdos-program=Windows Executable
+image/pjpeg=Imagen
+application/octet-stream=Desconocido
+application/x-msdownload=Ejecutable Windows
+application/x-msdos-program=Ejecutable Windows 
 x-world/x-vrml=VRML
-model/vrml=VRML
 application/x-blaxxunCC3D=VRML
 application/x-blaxxunCC3Dpro=VRML
 application/x-CC3D=VRML
-application/x-osp=Form Item
-video/x-flv=Flash Video
+application/x-osp=OSPiStructuredArtifact
+video/x-flv=Video Flash
 video/webm=HTML5 Video
-application/vnd.ms-excel.sheet.binary.macroEnabled.12=Excel 
-application/vnd.ms-excel.sheet.macroEnabled.12=Excel
+application/vnd.ms-excel.sheet.binary.macroEnabled.12=Excel
 application/vnd.ms-powerpoint.presentation.macroEnabled.12=PowerPoint
 application/vnd.ms-powerpoint.slideshow.macroEnabled.12=PowerPoint
-application/vnd.ms-word.document.macroEnabled.12=Word 
+application/vnd.ms-word.document.macroEnabled.12=Word
 application/vnd.ms-word.template.macroEnabled.12=Word
 application/vnd.ms-word=Word
-application/vnd.ms-xpsdocument=XPS 
-application/vnd.openxmlformats-officedocument.presentationml.presentation=PowerPoint 
+application/vnd.ms-xpsdocument=XPS
+application/vnd.openxmlformats-officedocument.presentationml.presentation=PowerPoint
 application/vnd.openxmlformats-officedocument.presentationml.slideshow=PowerPoint
 application/vnd.openxmlformats-officedocument.spreadsheetml.sheet=Excel
-application/vnd.openxmlformats-officedocument.wordprocessingml.document=Word 
+application/vnd.openxmlformats-officedocument.wordprocessingml.document=Word
 application/vnd.openxmlformats-officedocument.wordprocessingml.template=Word
 application/vnd.openxmlformats=MS Office
 application/vnd.oasis.opendocument.text=OpenDocument Text
@@ -163,5 +160,5 @@ application/vnd.oasis.opendocument.chart=OpenDocument Chart
 application/vnd.oasis.opendocument.formula=OpenDocument Formula
 application/vnd.oasis.opendocument.database=OpenDocument Database
 application/vnd.oasis.opendocument.image=OpenDocument Image
-application/vnd.openofficeorg.extension=OpenOffice.org extension (since OOo 2.1)
+application/vnd.openofficeorg.extension=OpenOffice.org extension (a partir de OOo 2.1)
 application/ogg=Ogg Vorbis Media
