--- a/custom_builds/7/assignment/assignment-10.x/assignment-bundles/resources/assignment_es.properties
+++ b/custom_builds/7/assignment/assignment-10.x/assignment-bundles/resources/assignment_es.properties
@@ -111,7 +111,7 @@ gen.grade.override=Sobreescribir nota con\:
 gen.grading=Calificando \t 
 gen.group=Grupos
 gen.subformat=Seleccione el formato para las entregas de los estudiantes
-group.issubmit=\u00bfHay entregas para un grupo?
+group.issubmit=\u00bfSe trata de una tarea grupal donde hay una sola entrega por cada grupo?
 gen.groupassignment=Entrega de grupo
 gen.userassignment=Entrega individual
 gen.section.info=Secci\u00f3n (no usar para entregas de grupo)
@@ -163,8 +163,8 @@ gen.notset=No Establecido \t
 gen.notsta=No ha empezado
 gen.of=de \t 
 gen.open=Abierto
-gen.orisub=Enviar texto original
-gen.orisub2=Enviar el texto original con los comentarios del profesor, si aplica \t 
+gen.orisub=Texto original enviado
+gen.orisub2=Texto de env\u00edo original con los comentarios del profesor, si aplica
 gen.orisub3=El \u00faltimo texto del env\u00edo con los comentarios del profesor incluido (si aplica) \t 
 gen.outof=fuera de \t 
 gen.peerReviews=Revisi\u00f3n por pares
@@ -173,7 +173,7 @@ gen.pos=Enviar
 gen.position=Posici\u00f3n
 gen.pre=Vista preliminar
 gen.relea=Publicar
-gen.resub=Reenviar
+gen.resub=Reenviado
 gen.retu=Corregir
 gen.backtolist=Volver a la lista
 gen.reorder=Reordenar
@@ -207,7 +207,7 @@ gen.sortbyfordesc=Ordenador por audiencia (descendente)
 gen.sordes=Ordenar (descendente)
 gen.staass=Comenzar tarea
 gen.status=Estado \t 
-gen.stuatt=Adjuntos enviado \t 
+gen.stuatt=Adjuntos enviados
 gen.student=Alumno \t 
 gen.students=Estudiantes
 gen.stunam=Nombre del Alumno
@@ -358,7 +358,7 @@ prevassig.shostuvie=Mostrar la vista del alumno
 
 releas=Publicar
 
-relgrad=Publicar calificaciones \t 
+relgrad=Publicar calificaciones
 relcommented=Versi\u00f3n comentada
 
 repsubmi.sorbysca=Ordenar por Escala
@@ -491,15 +491,15 @@ youmust7=Debe escribir su respuesta en el campo de texto antes de enviarla.
 list.show=Mostrar
 list.itemsper=elementos... \t 
 update=Actualizar
-removeSelected=Borrar seleccionados
+removeSelected=Borrar selecci\u00f3n
 subasstudent=Enviar como alumno
-alert.globalNavi=Si escoge salir sin pulsar ning\u00fan bot\u00f3n de acci\u00f3n de esta p\u00e1gina, perder\u00e1 el trabajo realizado.
+alert.globalNavi=Si sale sin pulsar ninguno de los botones de la parte superior o inferior de la p\u00e1gina, perder\u00e1 su trabajo. Por favor, elija uno de esos botones o navegue a la p\u00e1gina elegida y abandone su trabajo en esta p\u00e1gina.
 viewassign=Mostrar tarea
 subexampleassign=Enviar una tarea de ejemplo
 viewexampleassign=Mostrar la tarea de ejemplo
 assignmenttext=Texto de la tarea
 submitforstudent=Entregar en nombre del estudiante
-resubmit=Reenviar \t 
+resubmit=Reenviar
 viewsubmission=Mostrar reenv\u00edo
 viewsubmissions=Mostrar env\u00edos
 allowResubmit=Permitir reenv\u00edos \t 
@@ -552,7 +552,7 @@ grades.grade=nota \t
 grades.members=Miembros \t
 #group related variables
 displayto.site=Mostrar a los usuarios del sitio
-displayto.selected=Mostrar a los grupos seleccionados
+displayto.selected=Mostrar \u00fanicamente a los grupos seleccionados
 
 range.allgroups=sitio \t 
 
@@ -652,6 +652,7 @@ uploadall.choose.file.gradeFile.csv=Formato CSV, fichero grades.csv
 uploadall.choose.file.gradeFile.excel=Formato EXCEL, fichero grades.xls
 uploadall.choose.file.feedbackTexts=Texto de la realimentaci\u00f3n 
 uploadall.choose.file.feedbackComments=Comentarios de la realimentaci\u00f3n (fichero comments.txt si est\u00e1 disponible en la carpeta del estudiante y comentarios incluidos por el profesor en el campo Comentarios del env\u00edo del alumno)
+uploadall.choose.file.includeNotSubmitted=Incluir estudiantes que no han realizado un env\u00edo todav\u00eda
 uploadall.choose.file.confirm=Ha seleccionado un archivo de ficheros para subirlo. Los ficheros contenidos en el archivo se subir\u00e1n junto con el correspondiente env\u00edo del alumno.
 uploadall.releaseOption=Seleccionar una opci\u00f3n de publicaci\u00f3n \t 
 uploadall.releaseOption.yes=Publicar a los alumnos la informaci\u00f3n subida
@@ -715,6 +716,10 @@ nav.prev=< Anterior
 nav.list=Volver a la lista
 nav.next=Siguiente >
 nav.message=(Los cambios se guardar\u00e1n)
+nav.header=Navegar entre env\u00edos
+nav.prev.ungraded=< Anterior sin calificar
+nav.next.ungraded=Siguiente sin calificar >
+nav.view.subsOnly=Navegar entre alumnos con entregas
 
 gen.opendate.annc=Anunciar la fecha de apertura
 
@@ -779,7 +784,7 @@ allowResubmission.nouser=Por favor elija al menos un usuario para aplicar los aj
 allowResubmission.toggleall=Seleccionar/deseleccionar todos para permitir reenv\u00ed\tos
 allowResubmission.select.student=Permitir reenv\u00edos desde
 ## single file upload
-singleatt=S\u00f3lo carga de Archivo \u00fanico
+singleatt=Subida de un fichero \u00fanicamente
 att.upl=Seleccionar Archivo\:
 processmessage.file=Cargando archivo(s)
 size.exceeded=El tama\u00f1o de subida m\u00e1ximo de {0} MB ha sido superado. 
@@ -817,8 +822,8 @@ usedGradebookAssignment=Asociada con ''{0}''
 options=Opciones
 youarenot_options=No est\u00e1 autorizado para editar las opciones de la herramienta Tareas. \t 
 options_instruction=Escoge la opci\u00f3n de visualizaci\u00f3n de la p\u00e1gina de calificaciones.
-options_default=(Por defecto) Mostrar todos los env\u00edos del usuario.
-options_searchonly=S\u00f3lo mostrar los env\u00edos del usuario de acuerdo al filtro de grupo y los resultados de b\u00fasqueda.
+options_default=(Por defecto) Mostrar todos los usuarios con env\u00edo.
+options_searchonly=S\u00f3lo mostrar los usuarios con env\u00edo de acuerdo al filtro de grupo y los resultados de b\u00fasqueda.
 options_cannotFindSite=No se encuentra el sitio de la asignatura con id \= ''{0}''.
 options_cannotEditSite=No tiene permiso para editar el sitio de la asignatura con id \= ''{0}''.
 view_instruction=Por favor, seleccione un grupo para ver los env\u00edos de tareas de los estudiantes. \t 
@@ -867,8 +872,10 @@ content_review.error=Ha ocurrido un error desconocido. La revisi\u00f3n de origi
 content_review.error.createAssignment=La tarea ha sido guardada, pero no se pudo actualizar la informaci\u00f3n de Turnitin. Por favor, intenta guardarla otra vez.
 content_review.note=<div><br /><em>ATENCI\u00d3N, si est\u00e1 usando Turnitin\:</em><ol><li>Configure esta tarea como &quot;Un s\u00f3lo fichero adjunto.&quot;</li> <li>Informe a los estudiantes\:</li><ol><li>Entrega s\u00f3lo un adjunto.</li><li>S\u00f3lo estos tipos de ficheros\: Word, PDF, HTML, RTF, o texto plano.</li><li>Incluid siempre extensi\u00f3n.</li></ol></ol></div>
 
-noti.releaseresubmission.subject.content=Notificaci\u00f3n tarea que permite reenv\u00edo
-noti.releaseresubmission.text=Su tarea "{0}" ha sido corregida y permite reenv\u00edo(s). Por favor, vaya a {1} para ver los detalles.
+noti.releaseresubmission.subject.content=El env\u00edo de la tarea ha sido corregido
+noti.releaseresubmission.text=Su env\u00edo de la tarea "{0}" ha sido corregido y permite reenv\u00edos hasta la fecha de entrega. Por favor vaya a {1} para ver los detalles.
+noti.releaseresubmission.noresubmit.text=Su env\u00edo de la tarea "{0}" ha sido corregido. Por favor, vaya a {1} para ver los detalles.
+
 send.submission.releasereturn.email.options=Opciones de correo de env\u00edos de Devoluci\u00f3n de tareas\:
 send.submission.releasereturn.email.none=No enviar una notificaci\u00f3n por correo al alumno cuando se corrija la tarea y el alumno pueda realizar  reenv\u00edos
 send.submission.releasereturn.email=Enviar una notificaci\u00f3n por correo al alumno cuando se corrija la tarea y el alumno pueda realizar  reenv\u00edos
