--- a/site-manage/site-manage-10.x_features-backport/site-manage-group-helper/tool/src/bundle/org/sakaiproject/site/tool/managegroup/bundle/Messages_es.properties
+++ b/site-manage/site-manage-10.x_features-backport/site-manage-group-helper/tool/src/bundle/org/sakaiproject/site/tool/managegroup/bundle/Messages_es.properties
@@ -19,7 +19,7 @@ editgroup.generallist=Lista de miembros del sitio
 editgroup.grouplist=Lista de miembros del grupo
 editgroup.titlemissing=Necesita especificar un t\u00edtulo para el grupo.
 editgroup.removegroups=Borrar grupos
-editgroup.groupdel.alert=\u00bfEst\u00e1 seguro de que desea borrar los siguientes grupos?
+editgroup.groupdel.alert=Borrar un grupo no tiene vuelta atr\u00e1s. Las herramientas que usen el grupo o grupos seleccionados pueden no tener un comportamiento correcto despu\u00e9s del borrado. Es recomendable que verifique si alguna herramienta est\u00e1 usando estos grupos antes de borrarlos. \u00bfEst\u00e1 seguro de que quiere borrar los siguientes grupos?
 editgroup.site.permission.alert=No tiene permiso para hacer cambios en este sitio.
 editgroup.site.notfound.alert=Sitio no encontrado.
 
