svn merge -r321584:322477 https://source.sakaiproject.org/svn/assignment/branches/sakai-10.x/ .

--- a/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment_es.properties
+++ b/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment_es.properties
@@ -111,7 +111,7 @@ gen.grade.override=Sobreescribir nota con\:
 gen.grading=Calificando \t 
 gen.group=Grupos
 gen.subformat=Seleccione el formato para las entregas de los estudiantes
-group.issubmit=\u00bfHay entregas para un grupo?
+group.issubmit=\u00bfSe trata de una tarea grupal donde hay una sola entrega por cada grupo?
 gen.groupassignment=Entrega de grupo
 gen.userassignment=Entrega individual
 gen.section.info=Secci\u00f3n (no usar para entregas de grupo)
@@ -491,7 +491,7 @@ youmust7=Debe escribir su respuesta en el campo de texto antes de enviarla.
 list.show=Mostrar
 list.itemsper=elementos... \t 
 update=Actualizar
-removeSelected=Borrar seleccionados
+removeSelected=Borrar selecci\u00f3n
 subasstudent=Enviar como alumno
 alert.globalNavi=Si sale sin pulsar ninguno de los botones de la parte superior o inferior de la p\u00e1gina, perder\u00e1 su trabajo. Por favor, elija uno de esos botones o navegue a la p\u00e1gina elegida y abandone su trabajo en esta p\u00e1gina.
 viewassign=Mostrar tarea
@@ -552,7 +552,7 @@ grades.grade=nota \t
 grades.members=Miembros \t
 #group related variables
 displayto.site=Mostrar a los usuarios del sitio
-displayto.selected=Mostrar a los grupos seleccionados
+displayto.selected=Mostrar \u00fanicamente a los grupos seleccionados
 
 range.allgroups=sitio \t 
 
@@ -652,6 +652,7 @@ uploadall.choose.file.gradeFile.csv=Formato CSV, fichero grades.csv
 uploadall.choose.file.gradeFile.excel=Formato EXCEL, fichero grades.xls
 uploadall.choose.file.feedbackTexts=Texto de la realimentaci\u00f3n 
 uploadall.choose.file.feedbackComments=Comentarios de la realimentaci\u00f3n (fichero comments.txt si est\u00e1 disponible en la carpeta del estudiante y comentarios incluidos por el profesor en el campo Comentarios del env\u00edo del alumno)
+uploadall.choose.file.includeNotSubmitted=Incluir estudiantes que no han realizado un env\u00edo todav\u00eda
 uploadall.choose.file.confirm=Ha seleccionado un archivo de ficheros para subirlo. Los ficheros contenidos en el archivo se subir\u00e1n junto con el correspondiente env\u00edo del alumno.
 uploadall.releaseOption=Seleccionar una opci\u00f3n de publicaci\u00f3n \t 
 uploadall.releaseOption.yes=Publicar a los alumnos la informaci\u00f3n subida
