Change Help to Sakai Guide

--- a/custom_builds/159/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/159/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -57,8 +57,8 @@ sakai.gradebook.testservice.description             = Check Gradebook service
 sakai.gradebook.testservice.title                   = Gradebook Service Test
 sakai.gradebook.tool.description                    = For storing and computing assessment grades from Tests &amp; Quizzes or that are manually entered
 sakai.gradebook.tool.title                          = Gradebook
-sakai.help.description                              = The Sakai Help Tool
-sakai.help.title                                    = Help Documentation
+sakai.help.description                              = The Sakai Guide Tool
+sakai.help.title                                    = Sakai Guide
 sakai.iframe.description                            = For accessing web content from an external website within the site.
 sakai.iframe.myworkspace.description                = For displaying information about a user's My Workspace
 sakai.iframe.myworkspace.title                      = My Workspace Information Display
