--- Merging r320478 through r324944 into '.':

--- a/lessonbuilder/lessonbuilder-10.x_feature-backport/tool/src/resources/messages_es.properties
+++ b/lessonbuilder/lessonbuilder-10.x_feature-backport/tool/src/resources/messages_es.properties
@@ -472,6 +472,7 @@ simplepage.importcc-descrip=Cargar fichero con formato IMS CC.
 simplepage.importcc-assigntitle=Tarea {}
 simplepage.importcc-texttitle=Instrucciones
 simplepage.importcc-embedtitle=V\u00eddeo incrustado
+simplepage.embedded-video=V\u00eddeo incrustado
 
 simplepage.add-content=A\u00f1adir contenido del alumno
 simplepage.addtext-descrip=Agregar un elemento utilizando el editor de texto enriquecido
