--- a/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
+++ b/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric_es.properties
@@ -1031,7 +1031,7 @@ editgroup.generallist=Lista de los miembros del sitio
 editgroup.grouplist=Lista de miembros del Grupo
 editgroup.titlemissing=Debe especificar el nombre del Grupo
 editgroup.removegroups=Borrar Grupos
-editgroup.groupdel.alert=\u00bfEst\u00e1 seguro que quiere eliminar los siguientes grupos?
+editgroup.groupdel.alert=Borrar un grupo no tiene vuelta atr\u00e1s. Las herramientas que usen el grupo o grupos seleccionados pueden no tener un comportamiento correcto despu\u00e9s del borrado. Es recomendable que verifique si alguna herramienta est\u00e1 usando estos grupos antes de borrarlos. \u00bfEst\u00e1 seguro de que quiere borrar los siguientes grupos?
 editgroup.site.permission.alert=No tiene permiso para hacer cambios al sitio.
 editgroup.site.notfound.alert=Sitio no encontrado.
 
