49926 renaming site tools

--- a/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -56,7 +56,7 @@ sakai.forums.title                                  = Forums
 sakai.gradebook.testservice.description             = Check Gradebook service
 sakai.gradebook.testservice.title                   = Gradebook Service Test
 sakai.gradebook.tool.description                    = For storing and computing assessment grades from Tests &amp; Quizzes or that are manually entered
-sakai.gradebook.tool.title                          = Gradebook
+sakai.gradebook.tool.title                          = My Results
 sakai.help.description                              = The Sakai Help Tool
 sakai.help.title                                    = Help Documentation
 sakai.iframe.description                            = For accessing web content from an external website within the site.
@@ -140,7 +140,7 @@ sakai.sample.tool.servlet2.title                    = Simple Sample Servlet Tool
 sakai.sample.tools.OSIDRepository.description       = Display registered Repositories and Search
 sakai.sample.tools.OSIDRepository.title             = Sample use of RepositoryManager Component
 sakai.schedule.description                          = For posting and viewing deadlines, events, etc.
-sakai.schedule.title                                = Schedule
+sakai.schedule.title                                = Calendar
 sakai.scheduler.description                         = Job Scheduler Based on Quartz
 sakai.scheduler.title                               = Job Scheduler
 sakai.search.description                            = For searching content
@@ -154,13 +154,13 @@ sakai.site.roster.title                             = Roster
 sakai.sitebrowser.description                       = Find and view summarys of Sites
 sakai.sitebrowser.title                             = Site Browser
 sakai.siteinfo.description                          = For showing worksite information and site participants
-sakai.siteinfo.title                                = Site Info
+sakai.siteinfo.title                                = Site Editor
 sakai.sites.description                             = An administration tool to edit Sites
 sakai.sites.title                                   = Sites
 sakai.sitesetup.description                         = Modify your sites and create new ones
-sakai.sitesetup.title                               = Worksite Setup
+sakai.sitesetup.title                               = Site Setup
 sakai.su.description                                = Tool for logging in as another user
-sakai.su.title                                      = Become User
+sakai.su.title                                      = Super User
 sakai.summary.calendar.description                  = Show a summary of schedule events in My Workspace
 sakai.summary.calendar.title                        = Calendar
 sakai.syllabus.description                          = For posting a summary outline and/or requirements for a site
@@ -199,9 +199,9 @@ osp.wizard.title                                    = Wizards
 osp.wizard.description                              = OSP Wizards Tool
 sakai.reports.title                                 = Reports
 sakai.reports.description                           = Reports
-sakai.sitestats.admin.title			    = Statistics management
-sakai.sitestats.admin.description		    = Statistics management and administration
-sakai.sitestats.title				    = Statistics
+sakai.sitestats.admin.title			    = Site Statistics management
+sakai.sitestats.admin.description		    = Site Statistics management and administration
+sakai.sitestats.title				    = Site Statistics
 sakai.sitestats.description			    = For showing site statistics by user, event or resource of the site
 
 # Contrib tools
@@ -225,7 +225,7 @@ sakai.usermembership.description= Admin tool to retrieve site membership informa
 sakai.clog.title= Clog
 sakai.clog.description= The collaborative log tool
 
-sakai.lessonbuildertool.title=Lessons
+sakai.lessonbuildertool.title=Lessons Builder
 sakai.lessonbuildertool.description=For creating content modules and sequences; can be organized by week or unit
 
 sakai.dashboard.title= Dashboard
