--- a/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -150,9 +150,9 @@ sakai.sections.title                                = Section Info
 sakai.singleuser.description                        = View and modify my user profile
 sakai.singleuser.title                              = Account
 sakai.site.roster.description                       = For viewing the site participants list
-sakai.site.roster.title                             = Roster
+sakai.site.roster.title                             = Site Members
 sakai.sitebrowser.description                       = Find and view summarys of Sites
-sakai.sitebrowser.title                             = Site Browser
+sakai.sitebrowser.title                             = Site Search
 sakai.siteinfo.description                          = For showing worksite information and site participants
 sakai.siteinfo.title                                = Site Editor
 sakai.sites.description                             = An administration tool to edit Sites
@@ -234,7 +234,7 @@ sakai.dashboard.description= Unified My Workspace display of recent announcement
 sakai.signup.title=Sign-up
 sakai.signup.description=For enabling online registration for meetings and other events
 
-sakai.site.roster2.title=Roster
+sakai.site.roster2.title=Site Members
 sakai.site.roster2.description=For viewing the site participants list
 
 sakai.delegatedaccess.title=Delegated Access
