--- a/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -94,7 +94,7 @@ sakai.metaobj.title                                 = Forms
 sakai.motd.description                              = Display the system message of the day
 sakai.motd.title                                    = Message Of The Day
 sakai.news.description                              = For viewing content from online sources
-sakai.news.title                                    = News
+sakai.news.title                                    = RSS feeds
 sakai.online.description                            = See who's on-line and where they are
 sakai.online.title                                  = Online
 sakai.permissions.helper.description                = Sakai Permissions Helper Tool
