--- a/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
+++ b/custom_builds/171/config/sakai-10.x/localization/bundles/src/bundle/org/sakaiproject/localization/bundle/tool/tools.properties
@@ -209,7 +209,7 @@ sakai.jforum.tool.description =For participating in discussions and communicatin
 sakai.jforum.tool.title =Discussion and Private Messages
 
 sakai.melete.description = For authoring, publishing, and organizing learning sequences.
-sakai.melete.title = Modules
+sakai.melete.title = Learning Program
 sakai.meleteAdmin.description = Modules - Melete Lesson Builder for creating and organizing learning sequences.
 sakai.meleteAdmin.title = Modules Admin Tool
 
